# idlixdownloader-v2

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/idlixdownloader/: __init__.py  __main__.py  downloader.py
tests/: test_downloader.py
