[project]
name = "idlixdownloader"
version = "2.0.0"
description = "Video downloader for z2.idlixku.com with automated network capture and parallel segment downloading"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper>=1.2.71",
    "playwright>=1.40.0",
]

[project.scripts]
idlix = "idlixdownloader.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idlixdownloader"]

[tool.uv]
package = true
